# ai-toroidal-memory

./: .gitignore  BENCHMARK_SUMMARY.txt  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  test-api.sh
docs/: AI_MEMORY_COMPARISON.md  API_DOCUMENTATION.md  CHATBOT_APPLICATION.md  CONCEPTS.md  DEMO.md  DOCKER_TEST_RESULTS.md  DOCUMENTATION_UPDATE.md  GPU_BENCHMARKING.md  GPU_IMPLEMENTATION.md  GPU_LLM_INTEGRATION.md  IMPLEMENTATION_STATUS.md  PARALLEL_PROCESSING.md  PLAIN_ENGLISH_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  STATE_MANAGEMENT.md  TERMINAL_CHAT.md  VISUAL_GUIDE.txt
examples/: advanced.rs  benchmark.rs  chatbot.rs  gpu_and_llm.rs  gpu_benchmark.rs  gpu_benchmark_large.rs  memory_formation.rs  memory_server.rs  persistence.rs  rich_data.rs  terminal_chat.rs
src/: diffusion.rs  diffusion_shader.wgsl  gpu.rs  lib.rs  main.rs  pattern_matcher.rs  toroidal_memory.rs
