[package]
name = "ai-toroidal-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
rayon = { version = "1.8", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]

[dev-dependencies]
num_cpus = "1.16"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
