[package]
name = "ai-toroidal-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
rayon = { version = "1.8", optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }
futures = { version = "0.3", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
gpu = ["wgpu", "bytemuck", "futures"]

[dev-dependencies]
num_cpus = "1.16"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
